--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,6 +1,15 @@
-@mixin heading {
+@use 'variables' as v;
+
+@mixin heading ($color: blue, $border-radius: false) {
     text-transform: uppercase;
     font-size: 2.4rem;
-    color: black;
-    letter-spacing: 1px;
+    color: $color;
+    letter-spacing: 15px;
+    text-align: center;
+    background-color: black;
+
+    @if $border-radius {
+        border-radius: 1rem;
+    }
 }
+
