--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,15 +1,44 @@
 @use 'variables' as v;
 
-@mixin heading ($color: blue, $border-radius: false) {
-    text-transform: uppercase;
-    font-size: 2.4rem;
-    color: $color;
-    letter-spacing: 15px;
-    text-align: center;
-    background-color: black;
-
-    @if $border-radius {
-        border-radius: 1rem;
+@mixin phone {
+    @media (min-width: v.$telefono){
+        @content;
     }
 }
 
+@mixin tablet {
+    @media (min-width: v.$tablet){
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: v.$desktop){
+        @content;
+    }
+}
+
+@mixin desktopXL {
+    @media (min-width: v.$desktopXL){
+        @content;
+
+    }
+}
+
+
+
+
+
+
+// @mixin heading ($color: blue, $border-radius: false) {
+//     text-transform: uppercase;
+//     font-size: 2.4rem;
+//     color: $color;
+//     letter-spacing: 15px;
+//     text-align: center;
+//     background-color: black;
+
+//     @if $border-radius {
+//         border-radius: 1rem;
+//     }
+// }
