--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,4 +11,9 @@ $morado: #752f97;
 $negro: #000;
 $blanco: #fff;
 
+// Tamaños de Media Queries
 
+$telefono: 480px;
+$tablet: 768px;
+$desktop: 992px;
+$desktopXL: 1200px;
