--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -6,12 +6,35 @@
 
     h1 {
         color: v.$blanco;
+        text-align: center;
+        @include m.tablet {
+            margin: 0;
+        }
+
+    }
+    .contenido-header {
+        padding: 2rem;
+        @include m.tablet {
+         display: flex;
+         justify-content: space-between;
+        align-items: center;
+        }
     }
 }
 .navegacion-principal {
+    @include m.tablet {
+        display: flex;
+        gap: 2rem
+    }
     a {
+        display: block;
+        text-align: center;
         color: v.$blanco;
         font-size: 2.4rem;
+        margin-bottom: 1rem;
+        @include m.tablet {
+            margin: 0;
+        }
         
         &:hover { // elimina el espacio
             color: v.$amarillo;
@@ -19,10 +42,3 @@
     }
 }
 
-.prueba {
-    @include m.heading(v.$morado, true);
-}
-.texto {
-    @include m.heading(v.$rosa, true);
-    font-weight: bold;
-}
